--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,31 @@
 * {
     font-family: Georgia, "Times New Roman", serif;
-    background-color: gold;
-    color: black;
-}
-
-#title {
-    text-align: center;
-    font-size: 50px;
-    height: 65px;
-    width: auto;
-    background-color: aqua;
-}
-
-ul {
-    font-size: 18px;
-    background-color: red;
-}
-
-li {
-    background-color: green;
+    background-color: rgba(255, 255, 255, 0.36);
+    color: rgba(255, 60, 60, 0.962);
 }
 
 a {
     font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: blue;
+    font-size: 18px;
+}
+
+.main-title {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    height: 65px;
+}
+
+.title {
+    font-style: italic;
+}
+
+.image {
+    text-align: center;
+}
+
+#link-homepage {
+    color: rgba(255, 60, 60, 0.5);
 }
 
 #first {
